# deepseek-telegram-bridge

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  REVIEW_CHECKLIST.md  pyproject.toml  requirements-dev.txt  requirements.txt
.claude/qa-doctrine/: 00-RECIPE.md  01-PLUGINS.md  06-WORKFLOW-PATTERNS.md  07-ROLE-PERSONA.md  08-ADVISOR.md  09-VERIFICATION.md  10-ANTI-PATTERNS.md  INDEX.md  README.md
.claude/qa-doctrine/02-skills/master-tester-doctrine/: SKILL.md
.claude/qa-doctrine/02-skills/security-review/: SKILL.md
.claude/qa-doctrine/03-memory-seed/: MEMORY.md.example  MEMORY.md.template  feedback-master-tester.md  project-pointer.template.md
.claude/qa-doctrine/04-settings/: SETTINGS-GUIDE.md  settings.local.json.template
.claude/qa-doctrine/05-project-seed/: atomic-prod-write.template.sh  audit-dir-structure.md  handoff-doc.template.md
.claude/qa-doctrine/DOCTRINE/: master-tester-extracts.md
.claude/qa-doctrine/EXAMPLES/: case-studies.md
.claude/qa-doctrine/scripts/: install.sh  seed-memory.sh
.claude/skills/confidence-check/: SKILL.md
.claude/skills/master-tester-doctrine/: .gitignore  AGENTS.md  CHANGELOG.md  LICENSE  README.md  SKILL.md  SOUL.md
.claude/skills/master-tester-doctrine/configs/: .dependency-cruiser.js  biome.json  vitest.config.ts
.claude/skills/master-tester-doctrine/docs/: ENGINEERING-PLAN.md  INTEGRATION-GUIDE.md  PATTERNS-REFERENCE.md
.claude/skills/master-tester-doctrine/doctrine/: INDEX.md  MASTER-TESTER-DOCTRINE.md  expanded-modern-ts-testers-guideline.md  modern-ts-testers-guideline.md  oath-of-the-master-tester.md  unit-testing-rule-book.md  vanguard-of-ts-testing.md
.claude/skills/master-tester-doctrine/references/: advanced-patterns.md  anti-patterns.md  golden-rules.md  workflow-example.md  zero-trust-protocol.md
.claude/skills/master-tester-doctrine/scripts/: ci-gate.sh  install.sh  test-quality-check.sh  verify.sh
.claude/skills/master-tester-doctrine/src/: subagent-prompt.md
.claude/skills/master-tester-doctrine/src/factories/: project.ts
.claude/skills/master-tester-doctrine/src/mocks/: handlers.ts  server.ts
.claude/skills/master-tester-doctrine/src/test-utils/: deferred.ts  flush-promises.ts  strict-mock.ts
.github/workflows/: ci.yml
config/: config.example.json
docs/: API_ARCHITECTURE.md  ERROR_HANDLING.md  TESTING_DOCTRINE.md  USER_MANUAL.md
scripts/: diagnostics.sh  install-skill.sh  install.sh  status.sh  watchdog.sh
skill/: SKILL.md
skill/references/: bridge-architecture.md  troubleshooting.md
src/: bridge.py
tests/: conftest.py
tests/property/: test_invariants.py
tests/race/: test_concurrent.py
tests/unit/: test_bridge.py
